<resources>
    <string name="app_name">EV Charging App</string>
    <string name="title_bar"></string>
    <string name="second_welcome">to the EV Charging App</string>
    <string name="welcome">Welcome</string>
    <string name="name">Please Enter Name</string>
    <string name="button_next">Next</string>
    <string name="calendar">Schedule</string>
    <string name="saveBtn">Save Date</string>
    <string name="date">Selected Date</string>
    <string name="empty"></string>
    <string name="clockButton">Continue to Select Time</string>
    <string name="setTime">Set Time</string>
    <string name="home">Home</string>
    <string name="enter_distance">Enter Distance (miles)</string>
    <string name="charge">How Much Charge is Needed?</string>
    <string name="calc_charge">Calculate Charge</string>
    <string name="charge_now">Charge Now!</string>
    <string name="car_model">Car Model: Tesla X</string>
    <string name="added">Added on: May 7, 2017</string>
    <string name="charges">Number of Charges to Date: 81</string>
    <string name="mileage">Mileage: 891 miles</string>
    <string name="stats">Stats</string>
    <string name="details">Change Car</string>
    <string name="scheduled_another_charge">Schedule Another Charge</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>